Lower level functions
I cleaned up the documentation and tests for my lower level functions
based on the sentimentIt article

--- a/todo.txt
+++ b/todo.txt
@@ -60,13 +60,13 @@ batchesWrapper and timedWrapper
 David 
 !batchstatus
 batchesWrapper
-checkBatches
-createHITS
+!createBatches
+!createHITS
 createHITSTimed
-makeCompsSep
-readInData
-repostExpired
-movieReviewData
+!makeCompsSep (unsure how to test)
+!readInData
+!repostExpired
+!movieReviewData
 
 Taishi
 timedWrapper
