--- a/sentimentIt/vignettes/sentimentIt_vignette.Rmd
+++ b/sentimentIt/vignettes/sentimentIt_vignette.Rmd
@@ -13,41 +13,73 @@ This is a tutorial on how to use the SentimentIt R package. SentimentIt provides
 
 ###Probably want to include some background on SentimentIt here###
 
-1. Before interacting with the package in R, go to the following link: https://www.sentimentit.com/documentation/getting_started. The manual attached to the link explains how to create the necessary accounts with Amazon and SentimentIt so you can interact with Mechanical Turk. A SentimentIt account MUST be created before the R functionality can be used. 
+Create the necessary accounts
+------
 
-2. Once the five steps of the SentimentIt manual are completed, install the SentimentIt package in R using the following command:
+Before interacting with the package in R, go to the following link: https://www.sentimentit.com/documentation/getting_started. The manual attached to the link explains how to create the necessary accounts with Amazon and SentimentIt so you can interact with Mechanical Turk. A SentimentIt account MUST be created before the SentimentIt R package can be used. 
+
+Install/Load the SentimentIt R package
+------
+
+Once the five steps of the SentimentIt manual are completed, install the SentimentIt package in R using the following command:
 
 ```{r, eval = FALSE}
 install.packages("SentimentIt")
+
 #or if the package is already installed
 library("SentimentIt")
 ```
 
-3. Once the package is installed, you will need to assign unique ID numbers to each object in the data you would like to compare. Your data file containing the objects for comparison should be stored locally. The `readtext()` function will take the data as an input, import it into the SentimentIt repository, and assign unique values to each object in the data. If any objects already exist in the repository, the ID number for the existing object will be used instead of importing a duplicate.
+Assign ID numbers to data objects
+------
+
+Once the package is installed, you need to prepare your data for the pairwise comparisons. The first step is to assign unique ID numbers to each object of comparison using the `readText()` function. 
+
+The `readText()` function will take the data as an input, import it into the SentimentIt repository, and assign unique ID values to each object in the data. The function will then export the data to a specified file path, complete with ID numbers. If any objects already exist in the repository, the ID number for the existing object will be used instead of importing a duplicate.
+
+Your data should contain the set of objects you want to perform pairwise comparisons on. It may contain other data as well, but you will need to specify which column of data contains the data of interest. The best practice for running this function is to first import your data into your R workspace before running the function.
+
+The following example uses a sample dataset, "reviews.rda", to show how to use the `readText()` function to assign unique ID numbers
 
 ```{r, eval = FALSE}
-readtext(email = "johndoe@school.edu", password = "12345", 
-         read_documents_from = "/Users/johndoe/Desktop/reviews.csv",
-         write_documents_to = "/Users/johndoe/Desktop/reviews_ids.csv")
+load("/Users/johndoe/Desktop/reviews.rda") #data is stored in R workspace as "reviews"
+
+#assign a name to the function so the data with IDs will be stored in your R workspace in addition to being exported to your desired filepath.
+reviews_with_ids <- readText(email = "johndoe@school.edu", password = "12345",
+         read_documents_from = reviews,
+         write_documents_to = "/Users/johndoe/Desktop/reviews_with_ids.csv",
+         index = "Review") #"Review" is the column name for the data I want to use in the comparison
 ```
 
-`readtext` accepts the following arguments: 
-
-3. Once the package is installed, identify yourself to the SentimentIt API from R using the `authenticate()` function. Input as character vectors the email and password used to create your SentimentIt account.
-
-```{r, eval = FALSE}
-authenticate(email = "johndoe@school.edu", password = "12345")
-```
-
-`authenticate()` accepts the following arguments:
+`readText()` accepts the following arguments:
 
 -   `email`: Character vector, the email address for the registered SentimentIt account.
 
 -   `password`: Character vector, the password associated with `email`.
 
-After running `authenticate()` with correctly specified `email` and `password`, the R console will return a character vector containing the authentication token for your session.
+-   `read_documents_from`: The name of the R object the data is being drawn from. Can also be a character vector  indicating a filepath.
 
-4. After receiving the authentication token from R, use the `readtext()` function to assign unique ID numbers to each 
+-   `write_documents_to`: The file path to write the `read_documents_from` object appended with the unique IDs. Default is NULL and the results will not be saved, but only returned. For best functionality specify a csv.
+
+-   `index`: If the data is tabular, this field should contain either a character vector or integer identifying the column name of the data to be used in the comparisons. Default is `NULL`, indicating the text was not sent in tabular format.
+
+-   `sep`: Argument passed to `read.table()` function. If using an R workspace object, do not edit this field. Default is line break. Only needed when index is not `NULL`.
+
+-   `what`: Argument passed to `scan()` function. Default is character. Only needed when index is NULL.
+
+-   `quiet`: Argument passed to `scan()` function. Default is TRUE. Only needed when index is NULL.
+
+-   `...`: Additional arguments passed to either `scan()` or `read.table()` depending on type of data used.
+
+Generate random comparisons between objects
+------
+
+At this point, the data with unique ID numbers should be stored both in your R workspace and in the filepath specified in `readText()`. The next step is to 
+
+
+
+
+
 
 
 
