--- a/sentimentIt/vignettes/sentimentIt_vignette.Rmd
+++ b/sentimentIt/vignettes/sentimentIt_vignette.Rmd
@@ -81,7 +81,7 @@ Generate random pairs of IDs for comparisons
 At this point, the data with unique IDs should be stored both in your R workspace and in the filepath you specified in `readText()`. The next step is to create unique batch ID numbers. Each batch ID number will be associated with a "batch",
 which contains a portion of all comparisons to be sent to Mechanical Turk. Instead of sending all comparisons to Mechanical Turk at once, you can decide to release each batch at your discretion. 
 
-To create unique batch ID numbers, use the `createBatches()` function. Before using this function, you should have set up HIT settings on the SentimentIt website. You will need to provide the ID number of the specific HIT settings you would like to use for the comparisons.
+To create unique batch ID numbers, use the `createBatches()` function. Before using this function, you should have set up HIT settings on the SentimentIt website. You will need to provide the ID number of the specific HIT settings you would like to use for the comparisons. If you have not set up any HIT settings by this point, refer to the following documentation: https://www.sentimentit.com/documentation/running_analysis. 
 
 ```{r, eval = FALSE}
 
@@ -108,6 +108,8 @@ At this point, you should have run both the `readText()` and `createBatches()` f
 
 To generate these random pairings, run the `makeComps()` function, which will generate random pairings of your data objects and distribute them evenly among the number of batches you specify. Before running this function, you should have your unique batch ID numbers stored in your R workspace and you should have decided what quality you want to compare between the paired objects, which should be specified in the `question` input.
 
+Once the comparisons have been generated, they will be stored in the SentimentIt server and sent to Mechanical Turk when you direct them to. The function should return a vector of the batch IDs you provided. If not, the function did not correctly set up your batches. 
+
 ```{r, eval = FALSE}
 
 makeComps(email = "johndoe@school.edu", password = "12345",
@@ -127,11 +129,68 @@ makeComps(email = "johndoe@school.edu", password = "12345",
 
 -   `number_per`: Integer vector, how many documents per batch to be compared.
 
--   `batch_id`: 
+-   `batch_id`: Numeric vector, the unique batch ID numbers you generated in `createBatches()`.
 
 -   `question`: Character vector, the question the worker will see when comparing the texts.
 
 -   `pairwise_path`: Character vector, the filepath to save the created pairwise matrix. Default is "pairwise.Rdata".
+
+
+Send batches to Mechanical Turk
+------
+
+At this point, you should have run the `readText()`, `createBatches()`, and `makeComps()` functions and should therefore have pairwise comparisons set up under batches in the SentimentIt server. You are now prepared to send your batches to Mechanical Turk to have workers complete the pairwise comparisons of the data. 
+
+To send batches to Mechanical Turk, use the `createTasks()` function. As you can see in the below example, you can determine which batches you would like to send to Mechanical Turk by only speficying those specific batch IDs. You do not need to send them all at once.
+
+```{r, eval = FALSE}
+
+createTasks(email = "johndoe@school.edu", password = "12345",
+            batch_id = batch_ids[1]) #the batch_id object contains three unique batch IDs, but we are only sending the                                          first one to Mechanical Turk
+```
+
+`createTasks()` accepts the following arguments:
+
+-   `email`: Character vector, the email address for the registered SentimentIt account.
+
+-   `password`: Character vector, the password associated with `email`.
+
+-   `batch_id`: Numeric vector, the unique batch ID numbers you generated in `createBatches()`. Only specify the ID numbers for the batches you want to submit to Mechanical Turk now. Batches can be released at separate times.
+
+
+Check the status of batches in Mechanical Turk
+------
+
+Once you have submitted batches of comparisons to Mechanical Turk, you can check thier status to see how many comparisons in the batch have been completed. This can be done using the `checkBatches()` function. To check the status of a batch, all you need is the batch ID number.
+
+```{r, eval = FALSE}
+
+batchStatus(email = "johndoe@school.edu", password = "12345",
+              batch_id = batch_ids[1])
+```
+
+`batchStatus()` accepts the following arguments:
+
+-   `email`: Character vector, the email address for the registered SentimentIt account.
+
+-   `password`: Character vector, the password associated with `email`.
+
+-   `batch_id`: Numeric vector, the ID number associated with a batch of comparisons you have already sent to Mechanical Turk.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
